# agentic-workflows

./: .gitignore  README.md  pyproject.toml
src/: RAG.py  chunk_embed.py  file_chunk.py  file_input.py  main.py  refining-loop.py  to-do.md  vetor_db.py
src/core/: chunk_embed.py  file_chunk.py  file_input.py  vetor_db.py
src/logging_config/: save_outputs.py  setup_logging.py
src/templates/: prompts.py  schemas.py
templates/: paper_spec.md
tests/: pipeline_functions.py  test_fruit.py
