[project]
name = "va-research-agent"
version = "0.1.0"
description = "A research agent with RAG capabilities for PDF document processing"
readme = "README.md"
requires-python = "==3.11.14"
dependencies = [
    "ollama>=0.1.0",
    "pymupdf4llm>=0.0.1",
    "langchain-text-splitters>=0.0.1",
    "pydantic>=2.0.0",
    "chromadb>=0.4.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
